# controller/OrderController.js
@@ -1,41 +1,95 @@
 const Order = require('../model/Order');
+const OrderDetail = require('../model/OrderDetail');
 const Customer = require('../model/Customer');
 
 const { addNewCustomer } = require('../controller/CustomerController');
 
 async function addNewOrder(data) {
-  addNewCustomer(data.Customer).then((customer) => {
-    console.log(customer);
+  const customer = await addNewCustomer(data.CUSTOMER);
+  const order = await addOrder(data, customer.dataValues.ID);
+  data.ORDER_DETAIL.forEach((value) => {
+    value.ORDER_ID = order.dataValues.ID;
   });
+  await OrderDetail.bulkCreate(data.ORDER_DETAIL);
+  return order;
+}
 
+async function addOrder(data, customerId) {
   return await Order.create({
     TOTAL: data.TOTAL,
     NOTE: data.NOTE,
     PROVINCE_ID: data.PROVINCE_ID,
     DISTRICT_ID: data.DISTRICT_ID,
-    CUSTOMER_ID: data.CUSTOMER_ID,
+    CUSTOMER_ID: customerId,
     CREATED_BY: data.CREATED_BY,
   });
 }
 
 async function updateOrder(data) {
-  const TOTAL = data.TOTAL;
-  const NOTE = data.NOTE;
-  const DISTRICT_ID = data.DISTRICT_ID;
-  const PROVINCE_ID = data.PROVINCE_ID;
-  const CUSTOMER_ID = data.CUSTOMER_ID;
-  const MODIFIED_BY = data.MODIFIED_BY;
+  const customerId = data.CUSTOMER.ID;
+  const NAME = data.CUSTOMER.NAME;
+  const SURNAME = data.CUSTOMER.SURNAME;
+  const PHONE = data.CUSTOMER.PHONE;
+  const MODIFIED_BY = data.CUSTOMER.MODIFIED_BY;
   const MODIFIED_DATE = Date.now();
+  console.log(customerId);
+  await Customer.update(
+    {
+      NAME,
+      SURNAME,
+      PHONE,
+      MODIFIED_BY,
+      MODIFIED_DATE,
+    },
+    {
+      where: {
+        id: customerId,
+      },
+    },
+  );
+  console.log(data.ORDER_DETAIL);
+  data.ORDER_DETAIL.forEach(async (detailData) => {
+    console.log(detailData);
+    const orderDetailId = detailData.ID;
+    const QUANTITYY = detailData.QUANTITY;
+    const SIZEE = detailData.SIZE;
+    const SNEAKER_IDD = detailData.SNEAKER_ID;
+    const IS_DELETEDD = data.CUSTOMER.IS_DELETED;
+    const MODIFIED_BYY = data.CUSTOMER.MODIFIED_BY;
+    const MODIFIED_DATEE = Date.now();
+
+    await OrderDetail.update(
+      {
+        QUANTITY: QUANTITYY,
+        SIZE: SIZEE,
+        SNEAKER_ID: SNEAKER_IDD,
+        IS_DELETED: IS_DELETEDD,
+        MODIFIED_BY: MODIFIED_BYY,
+        MODIFIED_DATE: MODIFIED_DATEE,
+      },
+      {
+        where: {
+          id: orderDetailId,
+        },
+      },
+    );
+  });
+
+  const TOTALLL = data.TOTAL;
+  const NOTEEE = data.NOTE;
+  const DISTRICT_IDDD = data.DISTRICT_ID;
+  const PROVINCE_IDDD = data.PROVINCE_ID;
+  const MODIFIED_BYYY = data.MODIFIED_BY;
+  const MODIFIED_DATEEE = Date.now();
 
   return await Order.update(
     {
-      TOTAL,
-      NOTE,
-      DISTRICT_ID,
-      PROVINCE_ID,
-      CUSTOMER_ID,
-      MODIFIED_BY,
-      MODIFIED_DATE,
+      TOTAL: TOTALLL,
+      NOTE: NOTEEE,
+      DISTRICT_ID: DISTRICT_IDDD,
+      PROVINCE_ID: PROVINCE_IDDD,
+      MODIFIED_BY: MODIFIED_BYYY,
+      MODIFIED_DATE: MODIFIED_DATEEE,
     },
     {
       where: {
